crimson/os/seastore/cache: add lba nodes' logical begin addresses to extent_info_t

LBAManager rely on lba nodes' logical start addresses to judge whether an lba extent
is still live

Fixes: https://tracker.ceph.com/issues/53612
Signed-off-by: Xuehan Xu <xxhdx1985126@gmail.com>